load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "flag.go",
        "main.go",
        "mime.go",
        "serve.go",
    ],
    importpath = "github.com/uhthomas/kipp/cmd/kipp",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//internal/databaseutil:go_default_library",
        "//internal/filesystemutil:go_default_library",
        "//internal/x/context:go_default_library",
        "@com_github_alecthomas_units//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "kipp",
    data = ["//:web"],
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_bundle")

docker_bundle(
    name = "kipp_bundle",
    images = {
        "ghcr.io/jcansdale-test/kipp2:0": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:1": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:2": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:3": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:4": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:5": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:6": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:7": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:8": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:9": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:10": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:11": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:12": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:13": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:13": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:14": ":kipp",
        "ghcr.io/jcansdale-test/kipp2:15": ":kipp"
    },
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push",
    bundle = "kipp_bundle",
)
